# robots

./: CMakeLists.txt  README.md  foot_right.stl  joint_limits.yaml  package.xml
TestRobot/: model.sdf  model.urdf
VRarm/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
VRpuppet/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
biking_legs/: bike.world  cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
biking_legs2/: cardsflow.xml  logfile.txt  model.config  model.sdf
biking_legs3/: cardsflow.xml  logfile.txt  model.config  model.sdf
biking_legs4/: logfile.txt  model.config  model.sdf  model.urdf
cup_dispenser/: logfile.txt  model.config  model.sdf
exosuit/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
human/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
ice_scooper/: logfile.txt  model.config  model.sdf
msj_platform/: cardsflow.xml  joint_limits.txt  logfile.txt  model.config  model.sdf  model.urdf
msj_platform_head/: cardsflow.xml  joint_limits.txt  joint_limits.yaml  logfile.txt  model.config  model.sdf  model.urdf
msj_platform_shoulder_left/: cardsflow.xml  joint_limits.yaml  logfile.txt  model.config  model.sdf  model.urdf
msj_platform_shoulder_right/: joint_limits.yaml  logfile.txt
musc-le/: cardsflow.xml  logfile.txt  model.sdf  model.urdf  model.urdf-orig  muscles.osim
musc-le-ball/: ball  model.config  model.sdf
rickshaw_pedaling/: cardsflow.xml  model.config  model.sdf  model.urdf
rikshaw/: bike.world  cardsflow.xml  joint_limits_urdf.txt  (+4 more)
(+1242 files in other folders)
